# Smart-CodeGen-ML-Agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  TODO.md  env.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: prepare-release-pr.yml  release-and-publish.yml
ml_analysis_agent/: __init__.py  cli.py  file_manager.py  main.py  ml_analysis_manager.py  supervisor.py
ml_analysis_agent/agents/: __init__.py  base.py  code_executor.py  code_generator.py
ml_analysis_agent/config/: __init__.py  file_config.py  ml_config.py  prompt_manager.py  prompts.yaml
ml_analysis_agent/tools/: __init__.py  base.py  code_executor.py  code_saver.py  csv_analyzer.py  data_analyzer.py
ml_analysis_agent/utils/: input_helpers.py  logger.py
tests/: conftest.py  test_agents.py  test_cli.py  test_file_manager.py  test_main.py  test_ml_analysis_agent.py  test_ml_analysis_manager.py  test_tools.py
tests/agents/: __init__.py
tests/config/: test_config.py
tests/tools/: __init__.py
